--- a/build.properties
+++ b/build.properties
@@ -6,13 +6,13 @@ author = masa
 mod_file_name = malilib-fabric
 
 # Current mod version
-mod_version = 0.11.3
+mod_version = 0.11.4
 
 # Minecraft, Fabric and mappings versions
-minecraft_version_out = 1.18-rc3
-minecraft_version = 1.18-rc3
-mappings_version = 1.18-rc3+build.1
+minecraft_version_out = 22w03a
+minecraft_version = 22w03a
+mappings_version = 22w03a+build.4
 
-fabric_loader_version = 0.12.5
+fabric_loader_version = 0.12.12
 mod_menu_version = 3.0.0
-fabric_resource_loader_version = 0.4.11+3ac43d9514
+fabric_resource_loader_version = 0.4.12+e66b59e93a
